# FlexFlux

./: .classpath  .fatjar  .gitignore  .project  FlexFlux_executable.zip.REMOVED.git-id  LICENSE.md  README.md  TODO  cond1.states  null:test.tmp  ssa.tab
Data/: KOgenes  ReacTest  TwoReacsTest  cond  cond2  condElseTest.txt  condExtMetab.txt  condTest  condTestRfba  conditionsRFBA.txt  conditionsRFBA_2.txt  expFile  expFileCore  expFileCoreSch  int  intColiTest  intElseTest.txt  intExtMetab.txt  intTest  intTestRfba  interactionsRFBA_2.txt  metKOformated  rFBATest  surreyFile.tab  test.xml
ant/: buildAllJars.xml
ant/individual/: .gitignore  fatjar.xml  fatjar_without_parsebionet.xml  fatjar_without_parsebionet_for_metexploreJva.xml
doc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
doc/analyses/: CompFVAAnalysis.html
doc/applications/: FlexfluxDR.html  FlexfluxTest.html  package-tree.html  package-use.html
doc/general/: CplexBind.html  package-summary.html
doc/gui/: ArgumentComponent.html
lib/: parseBioNet.jar.REMOVED.git-id
pareto/: 1D.txt  2D_1.txt  3D_1.txt
shell/: .gitignore  Flexflux.bat  Flexflux.sh  GraphicalFlexflux.bat  GraphicalFlexflux.sh  README.txt  config  config.windows.bat
shell/FlexFlux/lib/glpk-4.50/doc/: Makefile.am  libglpk-java.3
src/: .gitignore  Bind.java  Constraint.java  CplexBind.java  DoubleResult.java  GLPKBind.java  Objective.java  Vars.java
(+1756 files in other folders)
